Polishing for Java 17 baseline